Stop modal top from being cut off

--- a/app/assets/stylesheets/assignments.css.scss
+++ b/app/assets/stylesheets/assignments.css.scss
@@ -17,8 +17,12 @@ body#assignments_controller {
     }
   }
 
-  #show_assignment_modal .modal-dialog {
-    width: 800px;
+  #show_assignment_modal {
+    z-index: 2000;
+    .modal-dialog {
+      width: 800px;
+      z-index: 2000;
+    }
   }
 
   .weekend {
